Fixed image refs

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class = 'container navigationMobile hide'>
-    <div class = 'row'><img class = 'closeMobileNav' src="../Skeleton-2.0.4/images/x.png"></img></div>
+    <div class = 'row'><img class = 'closeMobileNav' src="images/x.png"></img></div>
     <div class = 'row mobileLink'><a href="./index.html">about</a></div>
     <div class = 'row mobileLink'><a href='./work.html'>work</a></div>
   </div>
@@ -48,7 +48,7 @@
 
       </div>
       <div class ="two columns">
-        <img class='navMobile' src="../Skeleton-2.0.4/images/menu.png"></img>
+        <img class='navMobile' src=" images/menu.png"></img>
       </div>
     </div>
   </div>
