--- a/project_detail.html
+++ b/project_detail.html
@@ -35,7 +35,7 @@
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class = 'container navigationMobile hide'>
-    <div class = 'row'><img class = 'closeMobileNav' src="../Skeleton-2.0.4/images/x.png"></img></div>
+    <div class = 'row'><img class = 'closeMobileNav' src="images/x.png"></img></div>
     <div class = 'row mobileLink'><a href="./index.html">about</a></div>
     <div class = 'row mobileLink'><a href='./work.html'>work</a></div>
   </div>
@@ -48,14 +48,14 @@
 
       </div>
       <div class ="two columns">
-        <img class='navMobile' src="../Skeleton-2.0.4/images/menu.png"></img>
+        <img class='navMobile' src="images/menu.png"></img>
       </div>
     </div>
   </div>
   <div class="container content show">
       <div class="row">
         <div class = "eleven columns intro" >
-          <img src="../Skeleton-2.0.4/images/fill-wide.png"></img>
+          <img src="images/fill-wide.png"></img>
         </div>
       </div>
       <div class = 'row'>
@@ -68,15 +68,15 @@
       </div>
       <div class = 'row'>
         <div class = "six columns gallery">
-          <img src="../Skeleton-2.0.4/images/fill.png"></img>
+          <img src="images/fill.png"></img>
         </div>
         <div class = "six columns gallery">
-          <img src="../Skeleton-2.0.4/images/fill.png"></img>
+          <img src="images/fill.png"></img>
         </div>
       </div>
       <div class = 'row'>
         <div class = "eleven columns outro">
-          <img src="../Skeleton-2.0.4/images/fill.png"></img>
+          <img src="images/fill.png"></img>
         </div>
       </div>
 <!-- End Document
