--- a/work.html
+++ b/work.html
@@ -35,7 +35,7 @@
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class = 'container navigationMobile hide'>
-    <div class = 'row'><img class = 'closeMobileNav' src="../Skeleton-2.0.4/images/x.png"></img></div>
+    <div class = 'row'><img class = 'closeMobileNav' src="images/x.png"></img></div>
     <div class = 'row mobileLink'><a href="./index.html">about</a></div>
     <div class = 'row mobileLink'><a href='./work.html'>work</a></div>
   </div>
@@ -48,7 +48,7 @@
 
       </div>
       <div class ="two columns">
-        <img class='navMobile' src="../Skeleton-2.0.4/images/menu.png"></img>
+        <img class='navMobile' src="images/menu.png"></img>
       </div>
     </div>
   </div>
@@ -56,7 +56,7 @@
       <div class="row">
         <div class="four columns thumbs">
           <div class = "card">
-            <a href='./project_detail.html'><img src="../Skeleton-2.0.4/images/fill.png"></img></a>
+            <a href='./project_detail.html'><img src="images/fill.png"></img></a>
             <div class = 'titles'>
               <p class="title">Website + Branding</p><br>
               <p>Company Studios</p><br>
@@ -66,7 +66,7 @@
         </div><!-- Column1 -->
         <div class="four columns thumbs">
           <div class = "card">
-            <a href='./project_detail.html'><img src="../Skeleton-2.0.4/images/fill.png"></img></a>
+            <a href='./project_detail.html'><img src="images/fill.png"></img></a>
             <div class = 'titles'>
               <p class="title">Branding</p><br>
               <p>Startup Name</p><br>
@@ -76,7 +76,7 @@
         </div><!-- Column2 -->
         <div class="four columns thumbs">
           <div class = "card">
-            <a href='./project_detail.html'><img src="../Skeleton-2.0.4/images/fill.png"></img></a>
+            <a href='./project_detail.html'><img src="images/fill.png"></img></a>
             <div class = 'titles'>
               <p class="title">Website</p><br>
               <p>Company Incorporated</p><br>
