About desription update

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <div class="container content show">
       <div class="row">
         <div class ="seven columns about-description">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ut odio feugiat nisi ultricies imperdiet. Vestibulum lacinia mauris in eleifend ornare. Proin eget felis ipsum. Duis egestas eros nec dictum sollicitudin. Vestibulum porttitor imperdiet aliquam. Nullam sit amet purus ipsum. Aenean sollicitudin iaculis eros et vestibulum. Nunc diam elit, aliquam quis fringilla eget, congue vitae risus. Cras placerat nisi non eros commodo feugiat.</p>
+          <p>This website was created in order to show that I am not just a visual designer for the web, but someone who understands how things are built with code. I created this site from scratch using the <a href='https://atom.io/'>atom</a> text editor as well as using the open source boilerplate <a href='http://getskeleton.com/'>skeleton</a>. Feel free to check out the repository for the code <a href='https://github.com/mgluf/mgluf.github.io'>here</a> if you are interested in looking into the specifics. </p>
           <a>resume</a><br>
           <a>gluf.matt@gmail.com</a>
         </div>
