--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
         </div>
       </div>
     </div>
+  <div class ='footer'>
+    <p>mcgluf web demo 2019</p>
+  </div>
 
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
