--- a/work.html
+++ b/work.html
@@ -85,7 +85,11 @@
           </div>
         </div><!-- Column3 -->
       </div><!-- Row -->
-    </div><!-- Container -->
+  </div><!-- Container -->
+  <div class ='footer'>
+    <p>mcgluf web demo 2019</p>
+  </div>
+
 
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
