--- a/project_detail.html
+++ b/project_detail.html
@@ -79,6 +79,11 @@
           <img src="images/fill.png"></img>
         </div>
       </div>
+  </div>
+  <div class ='footer'>
+    <p>mcgluf web demo 2019</p>
+  </div>
+
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
