active page styling

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <div class="container navigation show">
     <div class="row">
       <div class="eleven columns name">
-        <h1>MATT GLUF</h1><a href="./index.html">about</a><a href='./work.html'>work</a>
+        <h1>MATT GLUF</h1><a class = 'active' href="./index.html">about</a><a href='./work.html'>work</a>
       </div>
       <div class ="two columns nav">
 
