CJG Designs demo site

--- a/contact.html
+++ b/contact.html
@@ -26,33 +26,23 @@
         <li><a id="projects" class="" href="/projects-custom-homes.html">Projects</a></li>
         <li><a id="services" class="" href="/services.html">Services</a></li>
         <li><a id="about" class="" href="/about.html">About</a></li>
-        <li><a id="contact" class="" href="/contact.html">Contact</a></li>
+        <li><a id="contact" class="active" href="/contact.html">Contact</a></li>
       </ul>
     </div>
   </div>
   <div class="content load">
     <div class="full-width">
-      <img src="../static/kitchen.jpg" alt="">
+      <img src="../static/about.jpg" alt="">
     </div>
-    <div class="mega-header">
-      <p>Bring Your Dream Home into Reality</p>
-    </div>
-    <div class="btn-group btn-group-center load">
-      <a href='/projects-custom-homes.html' class="btn btn-orange">Custom Homes</a>
-      <a href='/projects-remodels' class="btn btn-orange">Major Addtions</a>
-      <a href='/projects-small-projects' class="btn btn-orange">Small Projects</a>
-    </div>
-    <div class="container load">
-      <div class="img-header">
-        <img src="../static/drafting.jpg" alt="">
+    <div class="container center">
+      <div class="mega-header">
+        <h1>Schedule a Free Consultation</h1>
       </div>
-      <h2>A Lifelong Passion</h2>
-      <p>I have been designing things since my middle school drafting and shop classes in 1974 when I designed my first home - an octagon house, of course. I’ve been drawing ever since. In January of 2003 I started CJG Designs after spending 19 years working in many different areas of the Architectural field. But there is something about helping people with their home that I find more rewarding than any other kind of design <a href="/about.html">Learn More...</a></p>
-      <div class="btn-group mt-2">
-        <a href="/contact.html" class="btn">Schedule Free Consultation</a>
-      </div>
+      <a href="mailto:cjgdesigns@earthlink.net" target="_blank">CJGDESIGNS@EARTHLINK.NET</a>
+      </br></br>
+      <a href="https://www.linkedin.com/in/cary-gluf-4a978221/" target="_blank">LinkedIn</a>
+      <h2>980.621.0037</h2>
     </div>
-  </div>
   </div>
   <div class="footer">
     <div class="container footer-grid">
