--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </div>
   <div class="content load">
     <div class="full-width">
-      <img src="../static/kitchen.jpg" alt="">
+      <img src="../static/home-banner.JPG" alt="">
     </div>
     <div class="mega-header">
       <p>Bring Your Dream Home into Reality</p>
@@ -44,7 +44,7 @@
     </div>
     <div class="container load">
       <div class="img-header">
-        <img src="../static/drafting.jpg" alt="">
+        <img src="../static/passion.jpg" alt="">
       </div>
       <h2>A Lifelong Passion</h2>
       <p>I have been designing things since my middle school drafting and shop classes in 1974 when I designed my first home - an octagon house, of course. I’ve been drawing ever since. In January of 2003 I started CJG Designs after spending 19 years working in many different areas of the Architectural field. But there is something about helping people with their home that I find more rewarding than any other kind of design <a href="/about.html">Learn More...</a></p>
