--- a/projects-custom-homes.html
+++ b/projects-custom-homes.html
@@ -45,29 +45,30 @@
       <div id="custom-homes" class="carousel-wrapper load">
         <div class="carousel">
           <div class="carousel__photo">
-            <img src="https://picsum.photos/seed/1/1600/900">
-            <div class="caption">Custom Homes</div>
+            <img src="../static/house-1.JPG">
+            <div class="caption">Custom Home - Moorisville, NC</div>
           </div>
           <div class="carousel__photo">
-            <img src="https://picsum.photos/seed/2/1600/900">
-            <div class="caption">Caption</div>
+            <img src="../static/house-2.JPG">
+            <div class="caption">Custom Home - Moorisville, NC</div>
           </div>
           <div class="carousel__photo">
-            <img src="https://picsum.photos/seed/3/1600/900">
-            <div class="caption">Caption</div>
+            <img src="../static/house-3.JPG">
+            <div class="caption">Custom Home - Moorisville, NC</div>
           </div>
           <div class="carousel__photo">
-            <img src="https://picsum.photos/seed/4/1600/900">
-            <div class="caption">Caption</div>
+            <img src="../static/house-1.JPG">
+            <div class="caption">Custom Home - Moorisville, NC</div>
           </div>
           <div class="carousel__photo">
-            <img src="https://picsum.photos/seed/5/1600/900">
-            <div class="caption">Caption</div>
+            <img src="../static/house-2.JPG">
+            <div class="caption">Custom Home - Moorisville, NC</div>
           </div>
           <div class="carousel__photo">
-            <img src="https://picsum.photos/seed/6/1600/900">
-            <div class="caption">Caption</div>
+            <img src="../static/house-3.JPG">
+            <div class="caption">Custom Home - Moorisville, NC</div>
           </div>
+
           <div class="carousel__button--next"></div>
           <div class="carousel__button--prev"></div>
         </div>
