--- a/projects-remodels.html
+++ b/projects-remodels.html
@@ -45,28 +45,40 @@
       <div id="remodels" class="carousel-wrapper">
         <div class="carousel">
           <div class="carousel__photo">
-            <img src="https://picsum.photos/seed/7/1600/900">
-            <div class="caption">Major Remodels</div>
+            <img src="../static/pool-1.JPG">
+            <div class="caption">Backyard Pool Addition - Concord, NC</div>
           </div>
           <div class="carousel__photo">
-            <img src="https://picsum.photos/seed/8/1600/900">
-            <div class="caption">Caption</div>
+            <img src="../static/pool-2.JPG">
+            <div class="caption">Backyard Pool Addition - Concord, NC</div>
           </div>
           <div class="carousel__photo">
-            <img src="https://picsum.photos/seed/9/1600/900">
-            <div class="caption">Caption</div>
+            <img src="../static/pool-3.JPG">
+            <div class="caption">Backyard Pool Addition - Concord, NC</div>
           </div>
           <div class="carousel__photo">
-            <img src="https://picsum.photos/seed/10/1600/900">
-            <div class="caption">Caption</div>
+            <img src="../static/pool-4.JPG">
+            <div class="caption">Backyard Pool Addition - Concord, NC</div>
           </div>
           <div class="carousel__photo">
-            <img src="https://picsum.photos/seed/11/1600/900">
-            <div class="caption">Caption</div>
+            <img src="../static/custom-garage-1.JPG">
+            <div class="caption">Custom Garage, with Entry Arbor and Side Porch - Concord's North Historic District</div>
           </div>
           <div class="carousel__photo">
-            <img src="https://picsum.photos/seed/12/1600/900">
-            <div class="caption">Caption</div>
+            <img src="../static/custom-garage-2.JPG">
+            <div class="caption">Custom Garage - Concord, NC</div>
+          </div>
+          <div class="carousel__photo">
+            <img src="../static/custom-garage-3.JPG">
+            <div class="caption">Custom Garage - Concord, NC</div>
+          </div>
+          <div class="carousel__photo">
+            <img src="../static/whiteHouse-1-before.JPG">
+            <div class="caption">Major Addition Before</div>
+          </div>
+          <div class="carousel__photo">
+            <img src="../static/whiteHouse-2-after-1.JPG">
+            <div class="caption">Major Addition After</div>
           </div>
           <div class="carousel__button--next"></div>
           <div class="carousel__button--prev"></div>
