--- a/projects-small-projects.html
+++ b/projects-small-projects.html
@@ -45,29 +45,30 @@
       <div id="small-projects" class="carousel-wrapper">
         <div class="carousel">
           <div class="carousel__photo">
-            <img src="https://picsum.photos/seed/13/1600/900">
-            <div class="caption">Small Projects</div>
+            <img src="../static/barnett.JPG">
+            <div class="caption">A plain back door was transformed into an attractive and inviting entrance with this trellis & cedar roof addition.</div>
           </div>
           <div class="carousel__photo">
-            <img src="https://picsum.photos/seed/14/1600/900">
-            <div class="caption">Caption</div>
+            <img src="../static/cobert.JPG">
+            <div class="caption">A simple arbor can transform you patio into a private, outdoor room.</div>
           </div>
           <div class="carousel__photo">
-            <img src="https://picsum.photos/seed/15/1600/900">
-            <div class="caption">Caption</div>
+            <img src="../static/barnett.JPG">
+            <div class="caption">A plain back door was transformed into an attractive and inviting entrance with this trellis & cedar roof addition.</div>
           </div>
           <div class="carousel__photo">
-            <img src="https://picsum.photos/seed/16/1600/900">
-            <div class="caption">Caption</div>
+            <img src="../static/cobert.JPG">
+            <div class="caption">A simple arbor can transform you patio into a private, outdoor room.</div>
           </div>
           <div class="carousel__photo">
-            <img src="https://picsum.photos/seed/17/1600/900">
-            <div class="caption">Caption</div>
+            <img src="../static/barnett.JPG">
+            <div class="caption">A plain back door was transformed into an attractive and inviting entrance with this trellis & cedar roof addition.</div>
           </div>
           <div class="carousel__photo">
-            <img src="https://picsum.photos/seed/18/1600/900">
-            <div class="caption">Caption</div>
+            <img src="../static/cobert.JPG">
+            <div class="caption">A simple arbor can transform you patio into a private, outdoor room.</div>
           </div>
+
           <div class="carousel__button--next"></div>
           <div class="carousel__button--prev"></div>
         </div>
