--- a/services.html
+++ b/services.html
@@ -56,7 +56,7 @@
             Drafting Services
           </div>
           <ul>
-            <li>I’ll turn your document into a CAD drawing utilizing AutoCad LT 2002.</li>
+            <li>I’ll turn your document into a CAD drawing utilizing AutoCad 2021 Lt.</li>
           </ul>
         </li>
         <li>
@@ -95,7 +95,6 @@
           <ul>
             <li>Shop Drawing Preparation and Review.</li>
             <li>Hand drawn ink on vellum perspective drawings.</li>
-            <li>Large Format Printing and Plotting with a 42” HP DesignJet 500 Color Plotter. Up to 42 in. by 250 ft.</li>
           </ul>
         </li>
         <li>
