--- a/projects-custom-homes.html
+++ b/projects-custom-homes.html
@@ -32,7 +32,7 @@
   </div>
   <div class="content no-load">
 
-    <div class="container">
+    <div class="container-projects">
 
       <div class="project-nav">
         <h2>Projects</h2>
