--- a/projects-remodels.html
+++ b/projects-remodels.html
@@ -45,7 +45,7 @@
       <div id="remodels" class="carousel-wrapper">
         <div class="carousel">
           <div class="carousel__photo">
-            <img src="../static/pool-1.JPG">
+            <img src="../static/pool-1.jpg">
             <div class="caption">Backyard Pool Addition - Concord, NC</div>
           </div>
           <div class="carousel__photo">
