--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </div>
   <div class="content load">
     <div class="full-width">
-      <img src="../static/home-banner.JPG" alt="">
+      <img src="../static/home-banner.jpg" alt="">
     </div>
     <div class="mega-header">
       <p>Bring Your Dream Home into Reality</p>
