--- a/projects-custom-homes.html
+++ b/projects-custom-homes.html
@@ -45,27 +45,27 @@
       <div id="custom-homes" class="carousel-wrapper load">
         <div class="carousel">
           <div class="carousel__photo">
-            <img src="../static/house-1.JPG">
+            <img src="../static/house-1.jpg">
             <div class="caption">Custom Home - Moorisville, NC</div>
           </div>
           <div class="carousel__photo">
-            <img src="../static/house-2.JPG">
+            <img src="../static/house-2.jpg">
             <div class="caption">Custom Home - Moorisville, NC</div>
           </div>
           <div class="carousel__photo">
-            <img src="../static/house-3.JPG">
+            <img src="../static/house-3.jpg">
             <div class="caption">Custom Home - Moorisville, NC</div>
           </div>
           <div class="carousel__photo">
-            <img src="../static/house-1.JPG">
+            <img src="../static/house-1.jpg">
             <div class="caption">Custom Home - Moorisville, NC</div>
           </div>
           <div class="carousel__photo">
-            <img src="../static/house-2.JPG">
+            <img src="../static/house-2.jpg">
             <div class="caption">Custom Home - Moorisville, NC</div>
           </div>
           <div class="carousel__photo">
-            <img src="../static/house-3.JPG">
+            <img src="../static/house-3.jpg">
             <div class="caption">Custom Home - Moorisville, NC</div>
           </div>
 
