--- a/projects-small-projects.html
+++ b/projects-small-projects.html
@@ -45,27 +45,27 @@
       <div id="small-projects" class="carousel-wrapper">
         <div class="carousel">
           <div class="carousel__photo">
-            <img src="../static/barnett.JPG">
+            <img src="../static/barnett.jpg">
             <div class="caption">A plain back door was transformed into an attractive and inviting entrance with this trellis & cedar roof addition.</div>
           </div>
           <div class="carousel__photo">
-            <img src="../static/cobert.JPG">
+            <img src="../static/cobert.jpg">
             <div class="caption">A simple arbor can transform you patio into a private, outdoor room.</div>
           </div>
           <div class="carousel__photo">
-            <img src="../static/barnett.JPG">
+            <img src="../static/barnett.jpg">
             <div class="caption">A plain back door was transformed into an attractive and inviting entrance with this trellis & cedar roof addition.</div>
           </div>
           <div class="carousel__photo">
-            <img src="../static/cobert.JPG">
+            <img src="../static/cobert.jpg">
             <div class="caption">A simple arbor can transform you patio into a private, outdoor room.</div>
           </div>
           <div class="carousel__photo">
-            <img src="../static/barnett.JPG">
+            <img src="../static/barnett.jpg">
             <div class="caption">A plain back door was transformed into an attractive and inviting entrance with this trellis & cedar roof addition.</div>
           </div>
           <div class="carousel__photo">
-            <img src="../static/cobert.JPG">
+            <img src="../static/cobert.jpg">
             <div class="caption">A simple arbor can transform you patio into a private, outdoor room.</div>
           </div>
 
