--- a/projects-remodels.html
+++ b/projects-remodels.html
@@ -49,35 +49,35 @@
             <div class="caption">Backyard Pool Addition - Concord, NC</div>
           </div>
           <div class="carousel__photo">
-            <img src="../static/pool-2.JPG">
+            <img src="../static/pool-2.jpg">
             <div class="caption">Backyard Pool Addition - Concord, NC</div>
           </div>
           <div class="carousel__photo">
-            <img src="../static/pool-3.JPG">
+            <img src="../static/pool-3.jpg">
             <div class="caption">Backyard Pool Addition - Concord, NC</div>
           </div>
           <div class="carousel__photo">
-            <img src="../static/pool-4.JPG">
+            <img src="../static/pool-4.jpg">
             <div class="caption">Backyard Pool Addition - Concord, NC</div>
           </div>
           <div class="carousel__photo">
-            <img src="../static/custom-garage-1.JPG">
+            <img src="../static/custom-garage-1.jpg">
             <div class="caption">Custom Garage, with Entry Arbor and Side Porch - Concord's North Historic District</div>
           </div>
           <div class="carousel__photo">
-            <img src="../static/custom-garage-2.JPG">
+            <img src="../static/custom-garage-2.jpg">
             <div class="caption">Custom Garage - Concord, NC</div>
           </div>
           <div class="carousel__photo">
-            <img src="../static/custom-garage-3.JPG">
+            <img src="../static/custom-garage-3.jpg">
             <div class="caption">Custom Garage - Concord, NC</div>
           </div>
           <div class="carousel__photo">
-            <img src="../static/whiteHouse-1-before.JPG">
+            <img src="../static/whiteHouse-1-before.jpg">
             <div class="caption">Major Addition Before</div>
           </div>
           <div class="carousel__photo">
-            <img src="../static/whiteHouse-2-after-1.JPG">
+            <img src="../static/whiteHouse-2-after-1.jpg">
             <div class="caption">Major Addition After</div>
           </div>
           <div class="carousel__button--next"></div>
