--- a/services.html
+++ b/services.html
@@ -15,131 +15,157 @@
 </head>
 
 <body>
+  <div class="wrap">
+    <div id="main" class='clear-top'>
+      <div class="container my-4">
+        <div class="row">
+          <div class="col-lg-6 col-md-12 align-self-center logo">
+            <a class='w-100' href="/index.html">
+              <img class='img-fluid' src="./static/cjg.png">
+            </a>
+          </div>
 
-  <div class="header">
-    <div class="logo">
-      <a href="/index.html"><img src="./static/cjg.png"></a>
-    </div>
-    <div class="nav">
-      <div class="mobile"></div>
-      <ul>
-        <li><a id="projects" class="" href="/projects-custom-homes.html">Projects</a></li>
-        <li><a id="services" class="active" href="/services.html">Services</a></li>
-        <li><a id="about" class="" href="/about.html">About</a></li>
-        <li><a id="contact" class="" href="/contact.html">Contact</a></li>
-      </ul>
-    </div>
-  </div>
-  <div class="content load">
-    <div class="full-width">
-      <img src="../static/drafting.jpg" alt="">
-    </div>
-    <div class="container">
-      <h2 class="orange">Services</h2>
-      <ul class="services mt-2">
-        <li>
-          <div class="icon-wrap">
-            <div class="icon">
-              <img src="../static/codepen.svg" alt="">
+          <div class="col-lg-6 col-md-12 mt-4">
+            <div class="mobile d-flex d-sm-flex d-md-flex d-lg-none justify-content-center">
+              Mobile Menu
             </div>
-            Architectural Design
+            <ul class='header nav nav-pills justify-content-end d-none d-sm-none d-md-none d-lg-flex'>
+              <li class='nav-item'><a id="projects" class="nav-link " href="/projects-custom-homes.html">Projects</a></li>
+              <li class='nav-item'><a id="services" class="nav-link active" href="/services.html">Services</a></li>
+              <li class='nav-item'><a id="about" class="nav-link " href="/about.html">About</a></li>
+              <li class='nav-item'><a id="contact" class="nav-link " href="/contact.html">Contact</a></li>
+            </ul>
           </div>
-          <ul>
-            <li>Schematic, Preliminary and Final for Residential, Office, Warehouse, Retail, Motorsports, Industrial and More.</li>
-          </ul>
-        </li>
-        <li>
-          <div class="icon-wrap">
-            <div class="icon">
-              <img src="../static/edit-3.svg" alt="">
-            </div>
-            Drafting Services
+
+        </div>
+      </div>
+      <div class="container-fluid p-0 load">
+        <div class="row">
+          <div class="col">
+            <img class='img-fluid' src="../static/drafting.jpg" alt="">
           </div>
-          <ul>
-            <li>I’ll turn your document into a CAD drawing utilizing AutoCad 2021 Lt.</li>
-          </ul>
-        </li>
-        <li>
-          <div class="icon-wrap">
-            <div class="icon">
-              <img src="../static/layout.svg" alt="">
-            </div>
-            "As Built" Plan Services
+        </div>
+      </div>
+
+      <div class="container mt-4 load">
+        <div class="row">
+          <div class="col">
+            <h2 class="orange">Services</h2>
           </div>
-          <ul>
-            <li>I’ll measure building or home and create an accurate CAD file that you will be able to use now and in the future.</li>
-          </ul>
-        </li>
-        <li>
-          <div class="icon-wrap">
-            <div class="icon">
-              <img src="../static/book-open.svg" alt="">
-            </div>
-            Building Code Research
-          </div>
-          <ul>
-            <li>NC Building Code and Vol 1-C Accessibility Code.</li>
-            <li>Zoning Ordinance Research and development of Preliminary Site Plans.</li>
-            <li>Feasibility Studies for potential Development Projects.</li>
-            <li>Zoning, Historic, Planning or other hearing meeting representation and application assistance.</li>
-            <li>Construction Supervision for compliance with Construction Documents.</li>
-          </ul>
-        </li>
-        <li>
-          <div class="icon-wrap">
-            <div class="icon">
-              <img src="../static/pen-tool.svg" alt="">
-            </div>
-            Other Services
-          </div>
-          <ul>
-            <li>Shop Drawing Preparation and Review.</li>
-            <li>Hand drawn ink on vellum perspective drawings.</li>
-          </ul>
-        </li>
-        <li>
-          <ul>
+        </div>
+      </div>
+
+      <div class="container mt-2 load">
+        <div class="row">
+          <ul class="services">
             <li>
-              <h2 class="mt-2">If you can imagine it, I can draw it.</h2>
-              <div class="btn-group">
-                <a href="/contact.html" class="btn">Schedule Free Consultation</a>
+              <div class="icon-wrap">
+                <div class="icon">
+                  <img src="../static/codepen.svg" alt="">
+                </div>
+                Architectural Design
               </div>
+              <ul>
+                <li>Schematic, Preliminary and Final for Residential, Office, Warehouse, Retail, Motorsports, Industrial and More.</li>
+              </ul>
+            </li>
+            <li>
+              <div class="icon-wrap">
+                <div class="icon">
+                  <img src="../static/edit-3.svg" alt="">
+                </div>
+                Drafting Services
+              </div>
+              <ul>
+                <li>I’ll turn your document into a CAD drawing utilizing AutoCad 2021 Lt.</li>
+              </ul>
+            </li>
+            <li>
+              <div class="icon-wrap">
+                <div class="icon">
+                  <img src="../static/layout.svg" alt="">
+                </div>
+                "As Built" Plan Services
+              </div>
+              <ul>
+                <li>I’ll measure building or home and create an accurate CAD file that you will be able to use now and in the future.</li>
+              </ul>
+            </li>
+            <li>
+              <div class="icon-wrap">
+                <div class="icon">
+                  <img src="../static/book-open.svg" alt="">
+                </div>
+                Building Code Research
+              </div>
+              <ul>
+                <li>NC Building Code and Vol 1-C Accessibility Code.</li>
+                <li>Zoning Ordinance Research and development of Preliminary Site Plans.</li>
+                <li>Feasibility Studies for potential Development Projects.</li>
+                <li>Zoning, Historic, Planning or other hearing meeting representation and application assistance.</li>
+                <li>Construction Supervision for compliance with Construction Documents.</li>
+              </ul>
+            </li>
+            <li>
+              <div class="icon-wrap">
+                <div class="icon">
+                  <img src="../static/pen-tool.svg" alt="">
+                </div>
+                Other Services
+              </div>
+              <ul>
+                <li>Shop Drawing Preparation and Review.</li>
+                <li>Hand drawn ink on vellum perspective drawings.</li>
+              </ul>
+            </li>
+            <li>
             </li>
           </ul>
-
-        </li>
-      </ul>
-
-    </div>
-
-  </div>
-  <div class="footer">
-    <div class="container footer-grid">
-      <div class="footer-left">
-        <h2>About</h2>
-        </br>
-
-        <p>Designed & Built by <a href="https://mgluf.design/" target="_blank">Matthew Gluf</a></p>
-        </br>
-        <p>Updated Feb 2021</p>
+        </div>
       </div>
-      <div class="footer-center">
-        <h2>CJG Designs</h2>
-        </br>
-        <p>147 Glendale Ave SE</p>
-        </br>
-        <p>Concord, NC 28025</p>
-      </div>
-      <div class="footer-right">
-        <h2>Contact</h2>
-        </br>
-        <a href="mailto:cjgdesigns@earthlink.net" blank="_target">CJGDESIGNS@Earthlink.net</a>
-        </br></br>
-        <p>980.621.0037</p>
+
+      <div class="container load">
+        <div class="row">
+          <div class="col">
+            <h4 class="mt-2 blue">If you can imagine it, I can draw it.</h4>
+            <div class="btn-group">
+              <a href="/contact.html" class="btn">Schedule Free Consultation</a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
+  <div class="footer container-fluid mt-4">
+    <div class="container">
+      <div class="row py-3">
+        <div class="col-lg-4 col-md-12 text-lg-start text-sm-center">
+          <h2>About</h2>
+          <p>
+            Designed & Built by <a href="https://mgluf.design/" target="_blank">Matthew Gluf</a>
+            <br>
+            Updated Feb 2021
+          </p>
+        </div>
 
+        <div class="col-lg-4 col-md-12 text-lg-center text-sm-center">
+          <h2>CJG Designs</h2>
+          <p>
+            147 Glendale Ave SE
+            <br>
+            Concord, NC 28025
+          </p>
+        </div>
+
+        <div class="col-lg-4 col-md-12 text-lg-end text-sm-center">
+          <h2>Contact</h2>
+          <a href="mailto:cjgdesigns@earthlink.net" blank="_target">CJGDESIGNS@Earthlink.net</a>
+          <p>980.621.0037</p>
+        </div>
+
+      </div>
+    </div>
+  </div>
   <script type="text/javascript" src="./bundle.js"></script>
 </body>
 
