--- a/about.html
+++ b/about.html
@@ -15,107 +15,124 @@
 </head>
 
 <body>
+  <div class="wrap">
+    <div id="main" class='clear-top'>
+      <div class="container my-4">
+        <div class="row">
+          <div class="col-lg-6 col-md-12 align-self-center logo">
+            <a class='w-100' href="/index.html">
+              <img class='img-fluid' src="./static/cjg.png">
+            </a>
+          </div>
 
-  <div class="header">
-    <div class="logo">
-      <a href="/index.html"><img src="./static/cjg.png"></a>
-    </div>
-    <div class="nav">
-      <div class="mobile"></div>
-      <ul>
-        <li><a id="projects" class="" href="/projects-custom-homes.html">Projects</a></li>
-        <li><a id="services" class="" href="/services.html">Services</a></li>
-        <li><a id="about" class="active" href="/about.html">About</a></li>
-        <li><a id="contact" class="" href="/contact.html">Contact</a></li>
-      </ul>
+          <div class="col-lg-6 col-md-12 mt-4">
+            <div class="mobile d-flex d-sm-flex d-md-flex d-lg-none justify-content-center">
+              Mobile Menu
+            </div>
+            <ul class='header nav nav-pills justify-content-end d-none d-sm-none d-md-none d-lg-flex'>
+              <li class='nav-item'><a id="projects" class="nav-link " href="/projects-custom-homes.html">Projects</a></li>
+              <li class='nav-item'><a id="services" class="nav-link " href="/services.html">Services</a></li>
+              <li class='nav-item'><a id="about" class="nav-link active" href="/about.html">About</a></li>
+              <li class='nav-item'><a id="contact" class="nav-link " href="/contact.html">Contact</a></li>
+            </ul>
+          </div>
+
+        </div>
+      </div>
+      <div class="container mt-4 load">
+        <div class="row">
+          <div class="col">
+
+            <div class="row">
+              <div class="col-sm-12 col-md-6 col-lg-3">
+                <img src="../static/profile.png" alt="" class="img-fluid">
+              </div>
+              <div class="col-sm-12 col-md-6 col-lg-8 mt-4">
+                <ul class="credentials">
+                  <li>
+                    <h1>Cary J. Gluf</h1>
+                    <h3>Founder & President</h3>
+                  </li>
+                  <li>B. Science in Architecture 1984 - The Ohio State University</li>
+                  <li>State of North Carolina University Teacher</li>
+                  <li>National Council for Interior Design Qualified</li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="row mt-4">
+              <div class="col">
+                <h2>Experience</h2>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-sm-12 col-md-6">
+                <ul class="experience orange">
+                  <li>30+ Years Architectural and Construction</li>
+                  <li>20+ Years AutoCad</li>
+                  <li>18+ Years Retail and Commercial</li>
+                </ul>
+              </div>
+              <div class="col-sm-12 col-md-6">
+                <ul class="experience orange">
+                  <li>18+ Years of Residential Design and Remodeling</li>
+                  <li>26+ Years Marital Experience</li>
+                  <li>20+ Years of Child Rearing Experience</li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="row mt-4">
+              <div class="col">
+                <h2>About CJG Designs</h2>
+                <p>
+                  I have been designing things since my middle school drafting and shop classes in 1974 when I designed my first home - an octagon house, of course. I’ve been drawing ever since. In January of 2003 I started CJG Designs after spending 19 years working in many different areas of the Architectural field. But there is something about helping people with their home that I find more rewarding than any other kind of design work.
+                  </br></br>
+                  One important concept I want to convey to you as you look through this site is that I don’t have a preconceived idea of what your project will look like. I don’t work in one specific style of Architecture. My goal is to turn your vision into reality. I can work from any starting point - a sketch on a napkin, a plan you found in a magazine, or even just a photograph. Your design will be completed to meet your specific needs.
+                </p>
+                <div class="btn-group mt-2">
+                  <a href="/contact.html" class="btn">Schedule Free Consultation</a>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-  <div class="content load">
-    <div class="full-width">
-      <img src="../static/morhaus.jpg" alt="">
-    </div>
+
+  <div class="footer container-fluid mt-4">
     <div class="container">
-
-      <div class="profile-container">
-        <div class="profile">
-          <img src="../static/profile.png" alt="">
+      <div class="row py-3">
+        <div class="col-lg-4 col-md-12 text-lg-start text-sm-center">
+          <h2>About</h2>
+          <p>
+            Designed & Built by <a href="https://mgluf.design/" target="_blank">Matthew Gluf</a>
+            <br>
+            Updated Feb 2021
+          </p>
         </div>
-        <div class="profile-info">
-          <ul class="credentials">
-            <li>
-              <h1>Cary J. Gluf</h1>
-              <h3>Founder & President</h3>
-            </li>
-            <li>Bachelor of Science in Architecture 1984 - The Ohio State University</li>
-            <li>State of North Carolina University Teacher</li>
-            <li>National Council for Interior Design Qualified</li>
-          </ul>
+
+        <div class="col-lg-4 col-md-12 text-lg-center text-sm-center">
+          <h2>CJG Designs</h2>
+          <p>
+            147 Glendale Ave SE
+            <br>
+            Concord, NC 28025
+          </p>
         </div>
-      </div>
 
-      <h2>Experience</h2>
-      <div class="experience-container">
-        <ul class="experience orange">
-          <li>30+ Years Architectural and Construction</li>
-          <li>20+ Years AutoCad</li>
-          <li>18+ Years Retail and Commercial</li>
-          <li>
-            <div class="btn-group">
-              <a href="/services.html" class="btn">Services</a>
-            </div>
-          </li>
-        </ul>
-        <ul class="experience orange">
-          <li>18+ Years of Residential Design and Remodeling</li>
-          <li>26+ Years Marital Experience</li>
-          <li>20+ Years of Child Rearing Experience</li>
-          <li>
-            <div class="btn-group">
-              <a href="/projects-custom-homes.html" class="btn">Projects</a>
-            </div>
-          </li>
-        </ul>
-      </div>
+        <div class="col-lg-4 col-md-12 text-lg-end text-sm-center">
+          <h2>Contact</h2>
+          <a href="mailto:cjgdesigns@earthlink.net" blank="_target">CJGDESIGNS@Earthlink.net</a>
+          <p>980.621.0037</p>
+        </div>
 
-      <h2>About CJG Designs</h2>
-      <p>
-        I have been designing things since my middle school drafting and shop classes in 1974 when I designed my first home - an octagon house, of course. I’ve been drawing ever since. In January of 2003 I started CJG Designs after spending 19 years working in many different areas of the Architectural field. But there is something about helping people with their home that I find more rewarding than any other kind of design work.
-        </br></br>
-        One important concept I want to convey to you as you look through this site is that I don’t have a preconceived idea of what your project will look like. I don’t work in one specific style of Architecture. My goal is to turn your vision into reality. I can work from any starting point - a sketch on a napkin, a plan you found in a magazine, or even just a photograph. Your design will be completed to meet your specific needs.
-      </p>
-      <div class="btn-group mt-2">
-        <a href="/contact.html" class="btn">Schedule Free Consultation</a>
-      </div>
-
-    </div>
-  </div>
-  <div class="footer">
-    <div class="container footer-grid">
-      <div class="footer-left">
-        <h2>About</h2>
-        </br>
-
-        <p>Designed & Built by <a href="https://mgluf.design/" target="_blank">Matthew Gluf</a></p>
-        </br>
-        <p>Updated Feb 2021</p>
-      </div>
-      <div class="footer-center">
-        <h2>CJG Designs</h2>
-        </br>
-        <p>147 Glendale Ave SE</p>
-        </br>
-        <p>Concord, NC 28025</p>
-      </div>
-      <div class="footer-right">
-        <h2>Contact</h2>
-        </br>
-        <a href="mailto:cjgdesigns@earthlink.net" blank="_target">CJGDESIGNS@Earthlink.net</a>
-        </br></br>
-        <p>980.621.0037</p>
       </div>
     </div>
   </div>
-
   <script type="text/javascript" src="./bundle.js"></script>
 </body>
 
