--- a/contact.html
+++ b/contact.html
@@ -15,62 +15,82 @@
 </head>
 
 <body>
+  <div class="wrap">
+    <div id="main" class='clear-top'>
+      <div class="container my-4">
+        <div class="row">
+          <div class="col-lg-6 col-md-12 align-self-center logo">
+            <a class='w-100' href="/index.html">
+              <img class='img-fluid' src="./static/cjg.png">
+            </a>
+          </div>
 
-  <div class="header">
-    <div class="logo">
-      <a href="/index.html"><img src="./static/cjg.png"></a>
-    </div>
-    <div class="nav">
-      <div class="mobile"></div>
-      <ul>
-        <li><a id="projects" class="" href="/projects-custom-homes.html">Projects</a></li>
-        <li><a id="services" class="" href="/services.html">Services</a></li>
-        <li><a id="about" class="" href="/about.html">About</a></li>
-        <li><a id="contact" class="active" href="/contact.html">Contact</a></li>
-      </ul>
-    </div>
-  </div>
-  <div class="content load">
-    <div class="full-width">
-      <img src="../static/about.jpg" alt="">
-    </div>
-    <div class="container center">
-      <div class="mega-header">
-        <h1>Schedule a Free Consultation</h1>
-      </div>
-      <a href="mailto:cjgdesigns@earthlink.net" target="_blank">CJGDESIGNS@EARTHLINK.NET</a>
-      </br></br>
-      <a href="https://www.linkedin.com/in/cary-gluf-4a978221/" target="_blank">LinkedIn</a>
-      <h2>980.621.0037</h2>
-    </div>
-  </div>
-  <div class="footer">
-    <div class="container footer-grid">
-      <div class="footer-left">
-        <h2>About</h2>
-        </br>
+          <div class="col-lg-6 col-md-12 mt-4">
+            <div class="mobile d-flex d-sm-flex d-md-flex d-lg-none justify-content-center">
+              Mobile Menu
+            </div>
+            <ul class='header nav nav-pills justify-content-end d-none d-sm-none d-md-none d-lg-flex'>
+              <li class='nav-item'><a id="projects" class="nav-link " href="/projects-custom-homes.html">Projects</a></li>
+              <li class='nav-item'><a id="services" class="nav-link " href="/services.html">Services</a></li>
+              <li class='nav-item'><a id="about" class="nav-link " href="/about.html">About</a></li>
+              <li class='nav-item'><a id="contact" class="nav-link active" href="/contact.html">Contact</a></li>
+            </ul>
+          </div>
 
-        <p>Designed & Built by <a href="https://mgluf.design/" target="_blank">Matthew Gluf</a></p>
-        </br>
-        <p>Updated Feb 2021</p>
+        </div>
       </div>
-      <div class="footer-center">
-        <h2>CJG Designs</h2>
-        </br>
-        <p>147 Glendale Ave SE</p>
-        </br>
-        <p>Concord, NC 28025</p>
+      <div class="container-fluid load p-0">
+        <div class="row">
+          <div class="col">
+            <img src="../static/about.jpg" alt="" class="img-fluid">
+          </div>
+        </div>
       </div>
-      <div class="footer-right">
-        <h2>Contact</h2>
-        </br>
-        <a href="mailto:cjgdesigns@earthlink.net" blank="_target">CJGDESIGNS@Earthlink.net</a>
-        </br></br>
-        <p>980.621.0037</p>
+
+      <div class="container mt-4 load">
+        <div class="row">
+          <div class="col text-center">
+            <h1 class='blue'>Schedule a Free Consultation</h1>
+            <div class="btn-group my-4">
+              <a class='btn' href="mailto:cjgdesigns@earthlink.net" target="_blank">Email</a>
+              <a class='btn' href="https://www.linkedin.com/in/cary-gluf-4a978221/" target="_blank">LinkedIn</a>
+              <a class='btn'>980.621.0037</a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
+  <div class="footer container-fluid mt-4">
+    <div class="container">
+      <div class="row py-3">
+        <div class="col-lg-4 col-md-12 text-lg-start text-sm-center">
+          <h2>About</h2>
+          <p>
+            Designed & Built by <a href="https://mgluf.design/" target="_blank">Matthew Gluf</a>
+            <br>
+            Updated Feb 2021
+          </p>
+        </div>
 
+        <div class="col-lg-4 col-md-12 text-lg-center text-sm-center">
+          <h2>CJG Designs</h2>
+          <p>
+            147 Glendale Ave SE
+            <br>
+            Concord, NC 28025
+          </p>
+        </div>
+
+        <div class="col-lg-4 col-md-12 text-lg-end text-sm-center">
+          <h2>Contact</h2>
+          <a href="mailto:cjgdesigns@earthlink.net" blank="_target">CJGDESIGNS@Earthlink.net</a>
+          <p>980.621.0037</p>
+        </div>
+
+      </div>
+    </div>
+  </div>
   <script type="text/javascript" src="./bundle.js"></script>
 </body>
 
