--- a/index.html
+++ b/index.html
@@ -15,72 +15,106 @@
 </head>
 
 <body>
+  <div class="wrap">
+    <div id="main" class='clear-top'>
+      <div class="container my-4">
+        <div class="row">
+          <div class="col-lg-6 col-md-12 align-self-center logo">
+            <a class='w-100' href="/index.html">
+              <img class='img-fluid' src="./static/cjg.png">
+            </a>
+          </div>
 
-  <div class="header">
-    <div class="logo">
-      <a href="/index.html"><img src="./static/cjg.png"></a>
-    </div>
-    <div class="nav">
-      <div class="mobile"></div>
-      <ul>
-        <li><a id="projects" class="" href="/projects-custom-homes.html">Projects</a></li>
-        <li><a id="services" class="" href="/services.html">Services</a></li>
-        <li><a id="about" class="" href="/about.html">About</a></li>
-        <li><a id="contact" class="" href="/contact.html">Contact</a></li>
-      </ul>
-    </div>
-  </div>
-  <div class="content load">
-    <div class="full-width">
-      <img src="../static/home-banner.jpg" alt="">
-    </div>
-    <div class="mega-header">
-      <p>Bring Your Dream Home into Reality</p>
-    </div>
-    <div class="btn-group btn-group-center load">
-      <a href='/projects-custom-homes.html' class="btn btn-orange">Custom Homes</a>
-      <a href='/projects-remodels' class="btn btn-orange">Major Addtions</a>
-      <a href='/projects-small-projects' class="btn btn-orange">Small Projects</a>
-    </div>
-    <div class="container load">
-      <div class="img-header">
-        <img src="../static/passion.jpg" alt="">
-      </div>
-      <h2>A Lifelong Passion</h2>
-      <p>I have been designing things since my middle school drafting and shop classes in 1974 when I designed my first home - an octagon house, of course. I’ve been drawing ever since. In January of 2003 I started CJG Designs after spending 19 years working in many different areas of the Architectural field. But there is something about helping people with their home that I find more rewarding than any other kind of design <a href="/about.html">Learn More...</a></p>
-      <div class="btn-group mt-2">
-        <a href="/contact.html" class="btn">Schedule Free Consultation</a>
-      </div>
-    </div>
-  </div>
-  </div>
-  <div class="footer">
-    <div class="container footer-grid">
-      <div class="footer-left">
-        <h2>About</h2>
-        </br>
+          <div class="col-lg-6 col-md-12 mt-4">
+            <div class="mobile d-flex d-sm-flex d-md-flex d-lg-none justify-content-center">
+              Mobile Menu
+            </div>
+            <ul class='header nav nav-pills justify-content-end d-none d-sm-none d-md-none d-lg-flex'>
+              <li class='nav-item'><a id="projects" class="nav-link " href="/projects-custom-homes.html">Projects</a></li>
+              <li class='nav-item'><a id="services" class="nav-link " href="/services.html">Services</a></li>
+              <li class='nav-item'><a id="about" class="nav-link " href="/about.html">About</a></li>
+              <li class='nav-item'><a id="contact" class="nav-link " href="/contact.html">Contact</a></li>
+            </ul>
+          </div>
 
-        <p>Designed & Built by <a href="https://mgluf.design/" target="_blank">Matthew Gluf</a></p>
-        </br>
-        <p>Updated Feb 2021</p>
+        </div>
       </div>
-      <div class="footer-center">
-        <h2>CJG Designs</h2>
-        </br>
-        <p>147 Glendale Ave SE</p>
-        </br>
-        <p>Concord, NC 28025</p>
+      <div class="container-fluid load mt-2">
+        <div class="row">
+          <div class="col p-0">
+            <img src="../static/home-banner.jpg" alt="" class="img-fluid">
+          </div>
+        </div>
       </div>
-      <div class="footer-right">
-        <h2>Contact</h2>
-        </br>
-        <a href="mailto:cjgdesigns@earthlink.net" blank="_target">CJGDESIGNS@Earthlink.net</a>
-        </br></br>
-        <p>980.621.0037</p>
+      <div class="container load">
+
+        <div class="row mt-4">
+          <div class="col">
+            <h1 class='text-center'>Bring Your Dream Home into Reality</h1>
+          </div>
+        </div>
+
+        <div class="row mt-4">
+          <div class="col text-center">
+            <div class="btn-group load">
+              <a href='/projects-custom-homes.html' class="btn btn-orange">Custom Homes</a>
+              <a href='/projects-remodels.html' class="btn btn-orange">Major Addtions</a>
+              <a href='/projects-small-projects.html' class="btn btn-orange">Small Projects</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="row mt-4">
+          <div class="col d-none d-sm-block">
+            <img src="../static/passion.jpg" alt="" class="img-fluid">
+          </div>
+        </div>
+        <div class="row mt-4">
+          <div class="col-12">
+            <h2>A Lifelong Passion</h2>
+            <p>I have been designing things since my middle school drafting and shop classes in 1974 when I designed my first home - an octagon house, of course. I’ve been drawing ever since. In January of 2003 I started CJG Designs after spending 19 years working in many different areas of the Architectural field. But there is something about helping people with their home that I find more rewarding than any other kind of design </br><a href="/about.html">Learn More...</a></p>
+          </div>
+          <div class="col-lg-4 col-sm-12">
+            <div class="btn-group">
+              <a href="/contact.html" class="btn">Schedule Free Consultation</a>
+            </div>
+
+          </div>
+        </div>
+
       </div>
     </div>
   </div>
+  <div class="footer container-fluid mt-4">
+    <div class="container">
+      <div class="row py-3">
+        <div class="col-lg-4 col-md-12 text-lg-start text-sm-center">
+          <h2>About</h2>
+          <p>
+            Designed & Built by <a href="https://mgluf.design/" target="_blank">Matthew Gluf</a>
+            <br>
+            Updated Feb 2021
+          </p>
+        </div>
 
+        <div class="col-lg-4 col-md-12 text-lg-center text-sm-center">
+          <h2>CJG Designs</h2>
+          <p>
+            147 Glendale Ave SE
+            <br>
+            Concord, NC 28025
+          </p>
+        </div>
+
+        <div class="col-lg-4 col-md-12 text-lg-end text-sm-center">
+          <h2>Contact</h2>
+          <a href="mailto:cjgdesigns@earthlink.net" blank="_target">CJGDESIGNS@Earthlink.net</a>
+          <p>980.621.0037</p>
+        </div>
+
+      </div>
+    </div>
+  </div>
   <script type="text/javascript" src="./bundle.js"></script>
 </body>
 
