--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
               <li class='nav-item'><a id="projects" class="nav-link " href="/projects-custom-homes.html">Projects</a></li>
               <li class='nav-item'><a id="services" class="nav-link " href="/services.html">Services</a></li>
               <li class='nav-item'><a id="about" class="nav-link " href="/about.html">About</a></li>
-              <li class='nav-item'><a id="contact" class="nav-link " href="/contact.html">Contact</a></li>
+              <li class='nav-item mt-1 px-1'><a id="contact" class="nav-link " href="mailto:CJGDESIGNS@earthlink.net" target="_blank"><i data-feather='mail'></i></a></li>
+              <li class='nav-item mt-1 px-1'><a id="contact" class="nav-link " href="https://www.linkedin.com/in/cary-gluf-4a978221/" target="_blank"><i data-feather='linkedin'></i></a></li>
+              <li class='nav-item mt-1 px-1'><a id="contact" class="nav-link " href="#"><i data-feather='phone'></i></a></li>
             </ul>
           </div>
 
