--- a/contact.html
+++ b/contact.html
@@ -49,19 +49,25 @@
         </div>
       </div>
 
-      <div class="container mt-4 load">
+      <div class="consult container mt-4 load">
         <div class="row">
-          <div class="col text-center">
-            <h1 class='blue'>Schedule a Free Consultation</h1>
-            <div class="btn-group my-4">
-              <a class='btn' href="mailto:cjgdesigns@earthlink.net" target="_blank">Email</a>
-              <a class='btn' href="https://www.linkedin.com/in/cary-gluf-4a978221/" target="_blank">LinkedIn</a>
-              <a class='btn'>980.621.0037</a>
+          <div class="col-12 text-center">
+            <h1 class='blue'>Schedule Free Consultation</h1>
+            <p>With a $0 entry fee, get started today! I can help answer general questions regarding a project and will typically be able to give you a general cost estimate on point of contact.</p>
+            <div class="btn-group">
+              <a class='btn' href="mailto:cjgdesigns@earthlink.net" target="_blank"><i data-feather="mail"></i>Email</a>
+            </div>
+            <div class='btn-group'>
+              <a class='btn' href="https://www.linkedin.com/in/cary-gluf-4a978221/" target="_blank"><i data-feather="linkedin"></i>LinkedIn</a>
+            </div>
+            <div class="btn-group">
+              <a class='btn'><i data-feather="phone"></i>980.621.0037</a>
             </div>
           </div>
         </div>
       </div>
     </div>
+  </div>
   </div>
   <div class="footer container-fluid mt-4">
     <div class="container">
